// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests on batches > Admin key: Get one batch 1`] = `
Batch {
  "details": {},
  "duration": "PT0.000219583S",
  "finishedAt": "2025-04-01T07:00:51.408688632Z",
  "progress": null,
  "startedAt": "2025-04-01T07:00:51.408469049Z",
  "stats": {
    "indexUids": {
      "batch-test": 1,
    },
    "progressTrace": {
      "processing tasks": "180.17µs",
      "processing tasks > creating the index": "93.63µs",
      "writing tasks to disk": "64.29µs",
      "writing tasks to disk > task": "47.54µs",
    },
    "status": {
      "failed": 1,
    },
    "totalNbTasks": 1,
    "types": {
      "indexCreation": 1,
    },
  },
  "uid": 1839,
}
`;

exports[`Tests on batches > Master key: Get one batch 1`] = `
Batch {
  "details": {},
  "duration": "PT0.000211542S",
  "finishedAt": "2025-04-01T07:00:51.336459757Z",
  "progress": null,
  "startedAt": "2025-04-01T07:00:51.336248215Z",
  "stats": {
    "indexUids": {
      "batch-test": 1,
    },
    "progressTrace": {
      "processing tasks": "164.50µs",
      "processing tasks > creating the index": "82.04µs",
      "writing tasks to disk": "80.25µs",
      "writing tasks to disk > task": "63.92µs",
    },
    "status": {
      "failed": 1,
    },
    "totalNbTasks": 1,
    "types": {
      "indexCreation": 1,
    },
  },
  "uid": 1837,
}
`;
